--- a/lightning_talk_args_kwargs_python_types.ipynb
+++ b/lightning_talk_args_kwargs_python_types.ipynb
@@ -1333,8 +1333,24 @@
     }
    },
    "source": [
-    "# Thank You"
+    "# Thank You\n",
+    "<br><br><br>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "[https://github.com/surfaceowl/lightning_talk_args_kwargs_python_types](https://github.com/surfaceowl/lightning_talk_args_kwargs_python_types)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63c84159",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
